--- a/reports/lab3.html
+++ b/reports/lab3.html
@@ -228,24 +228,20 @@
         <div style="width: 630px; height: 100px; margin-top: -570px; margin-left: 250px; background-color: red; border: 1px solid black;"> </div>
         <div style="width: 300px; height: 400px; background-color: white; border: 1px solid black; margin-left: 250px; margin-top: 20px"> 3 </div>
         <div style="width: 300px; height: 400px; background-color: blue; border: 1px solid black; margin-left: 580px; margin-top: -400px; margin-bottom: 15px"> 4 </div>
-        <div style="width: 1000px; height: 50px; background-color: yellow; padding: 50px; border: 1px solid black;">
-            5 <div>
-            </div>
-            <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
-                color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 300px; margin: 20px 0">
+        <div style="width: 1000px; height: 50px; background-color: yellow; padding: 50px; border: 1px solid black;"> 5 </div>
+     </div>
+     <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb; color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 300px; margin: 20px 0">
             <div style="width:1000px; height: 800px; text-align: center; font-weight: bold">
             <div style="width: 1000px; height: 50px; background-color: yellow; padding: 50px; border: 1px solid black;">
             <div style="width: 200px; height: 40px; background-color: white; border: 1px solid black;"></div>
             1
-        </div>
+            </div>
             <div style="width: 200px; height: 600px; background-color: blue; border: 1px solid black;"> 2 </div>
             <div style="width: 630px; height: 100px; margin-top: -570px; margin-left: 250px; background-color: red; border: 1px solid black;"> </div>
             <div style="width: 300px; height: 400px; background-color: white; border: 1px solid black; margin-left: 250px; margin-top: 20px"> 3 </div>
             <div style="width: 300px; height: 400px; background-color: blue; border: 1px solid black; margin-left: 580px; margin-top: -400px; margin-bottom: 15px"> 4 </div>
             <div style="width: 1000px; height: 50px; background-color: yellow; padding: 50px; border: 1px solid black;"> 5 </div>
         </div>
-        </div>
-    </div>
         </textarea>
     </div>
 
