--- a/reports/lab3.html
+++ b/reports/lab3.html
@@ -245,50 +245,34 @@
         </textarea>
     </div>
 
-        <div id="p3-4">
-            <h1>Гумова блокова верстка</h1>
-            <div style="width: 80%; height: 750px;">
-                <div style="background-color: blue; height: 20%; width: 100%; text-align: center; border: black 1px solid; box-sizing: border-box">
-                    <b style="color: white; font-size: 50px">1</b>
-                </div>
-                <div style="height: 60%; width: 100%;">
-                    <div style="background-color: orange; width: 20%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
-                        <b style="color: black; font-size: 50px">5</b>
-                    </div>
-                    <div style="background-color: white; width: 60%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
-                        <b style="color: black; font-size: 50px">4</b>
-                    </div>
-                    <div style="background-color: orange; width: 20%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
-                        <b style="color: black; font-size: 50px">2</b>
-                    </div>
-                </div>
-                <div style="background-color: blue; height: 20%; text-align: center; border: black 1px solid; box-sizing: border-box">
-                    <b style="color: white; font-size: 50px">3</b>
-                </div>
-            </div>
-            <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
-                color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 300px; margin: 20px 0">
-            <div style="width: 90%; height: 750px; padding: 0">
-            <div style="background-color: blue; height: 20%; width: 100%; text-align: center; border: black 1px solid; box-sizing: border-box">
-            <b style="color: white; font-size: 50px">1</b>
+<div id="p3-4">
+    <h1>Гумова блокова верстка</h1>
+    <div style="width:100%; height: 100%; text-align: center; font-weight: bold">
+        <div style="width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;">
+            <div style="width: 20%; height: 100%; background-color: white; border: 1px solid black;"></div>
+            1
         </div>
-            <div style="height: 600px; width: 100%; padding: 0">
-            <div style="background-color: orange; width: 20%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
-            <b style="color: black; font-size: 50px">5</b>
-            </div>
-            <div style="background-color: white; width: 60%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
-            <b style="color: black; font-size: 50px">4</b>
-            </div>
-            <div style="background-color: orange; width: 20%; text-align: center; height: 100%;  border: black 1px solid; float: left; box-sizing: border-box">
-            <b style="color: black; font-size: 50px">2</b>
-            </div>
-        </div>
-            <div style="background-color: blue; height: 20%; text-align: center; border: black 1px solid; box-sizing: border-box">
-            <b style="color: white; font-size: 50px">3</b>
-        </div>
+        <div style="width: 20%; height: 60%; background-color: blue; border: 1px solid black;"> 2 </div>
+        <div style="width: 68%; height: 10%; margin-top: -60%; margin-left: 27%; background-color: red; border: 1px solid black;"> </div>
+        <div style="width: 30%; height: 40%; background-color: white; border: 1px solid black; margin-left: 250px; margin-top: 20px"> 3 </div>
+        <div style="width: 32%; height: 40%; background-color: blue; border: 1px solid black; margin-left: 580px; margin-top: -400px; margin-bottom: 15px"> 4 </div>
+        <div style="width: 100%; height: 2%; background-color: yellow; padding: 50px; border: 1px solid black;"> 5 </div>
     </div>
+    <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
+                color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 300px; margin: 20px 0">
+    <div style="width:100%; height: 100%; text-align: center; font-weight: bold"> 
+    <div style="width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;"> 
+    <div style="width: 20%; height: 100%; background-color: white; border: 1px solid black;"></div> 
+        1
+    </div>
+    <div style="width: 20%; height: 60%; background-color: blue; border: 1px solid black;"> 2 </div>
+    <div style="width: 68%; height: 10%; margin-top: -60%; margin-left: 27%; background-color: red; border: 1px solid black;"> </div>
+    <div style="width: 30%; height: 40%; background-color: white; border: 1px solid black; margin-left: 250px; margin-top: 20px"> 3 </div>
+    <div style="width: 32%; height: 40%; background-color: blue; border: 1px solid black; margin-left: 580px; margin-top: -400px; margin-bottom: 15px"> 4 </div>
+    <div style="width: 100%; height: 2%; background-color: yellow; padding: 50px; border: 1px solid black;"> 5 </div>
+</div>
     </textarea>
-        </div>
+</div>
 
 
         <div id="p4-sidebar">
