--- a/reports/lab3.html
+++ b/reports/lab3.html
@@ -247,7 +247,7 @@
 
 <div id="p3-4">
     <h1>Гумова блокова верстка</h1>
-    <div style="width:80%; height: 80%; text-align: center; font-weight: bold">
+    <div style="width:80%; height: 800px; text-align: center; font-weight: bold">
         <div style="width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;">
             <div style="width: 20%; height: 100%; background-color: white; border: 1px solid black;"></div>
             1
@@ -259,9 +259,10 @@
         <div style="width: 100%; height: 2%; background-color: yellow; padding: 5%; border: 1px solid black;"> 5 </div>
     </div>
 
+
     <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
                 color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 300px; margin: 20px 0">
-    <div style="width:80%; height: 80%; text-align: center; font-weight: bold"> 
+    <div style="width:80%; height: 800px; text-align: center; font-weight: bold"> 
     <div style="width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;"> 
     <div style="width: 20%; height: 100%; background-color: white; border: 1px solid black;"></div> 
         1
@@ -272,6 +273,7 @@
     <div style="width: 30%; height: 40%; background-color: blue; border: 1px solid black; margin-left: 65%; margin-top: -45%; margin-bottom: 1%"> 4 </div>
     <div style="width: 100%; height: 2%; background-color: yellow; padding: 5%; border: 1px solid black;"> 5 </div>
 </div>
+
 
     </textarea>
 </div>
