--- a/reports/lab3.html
+++ b/reports/lab3.html
@@ -252,11 +252,11 @@
             <div style="width: 20%; height: 100%; background-color: white; border: 1px solid black;"></div>
             1
         </div>
-        <div style="width: 20%; height: 60%; background-color: blue; border: 1px solid black;"> 2 </div>
-        <div style="width: 68%; height: 10%; margin-top: -65%; margin-left: 27%; background-color: red; border: 1px solid black;"> </div>
-        <div style="width: 30%; height: 40%; background-color: white; border: 1px solid black; margin-left: 27%; margin-top: 1%; margin-bottom: 1%;"> 3 </div>
-        <div style="width: 30%; height: 40%; background-color: blue; border: 1px solid black; margin-left: 65%; margin-top: -45%; margin-bottom: 1%"> 4 </div>
-        <div style="width: 100%; height: 2%; background-color: yellow; padding: 5%; border: 1px solid black;"> 5 </div>
+        <div style="float: left; box-sizing: border-box; width: 20%; height: 65%; background-color: blue; border: 1px solid black;"> 2 </div>
+        <div style="float: left; box-sizing: border-box; width: 70%; height: 10%; background-color: red; border: 1px solid black; margin: 3%"> </div>
+        <div style="float: left; box-sizing: border-box; width: 30%; height: 40%; background-color: white; border: 1px solid black; margin: 5%;"> 3 </div>
+        <div style="float: left; box-sizing: border-box; width: 30%; height: 40%; background-color: blue; border: 1px solid black; margin: 5%;"> 4 </div>
+        <div style="float: left; width: 100%; height: 2%; background-color: yellow; padding: 5%; border: 1px solid black;"> 5 </div>
     </div>
 
     <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
@@ -266,13 +266,12 @@
     <div style="width: 20%; height: 100%; background-color: white; border: 1px solid black;"></div> 
         1
     </div>
-    <div style="width: 20%; height: 60%; background-color: blue; border: 1px solid black;"> 2 </div>
-    <div style="width: 68%; height: 10%; margin-top: -65%; margin-left: 27%; background-color: red; border: 1px solid black;"> </div>
-    <div style="width: 30%; height: 40%; background-color: white; border: 1px solid black; margin-left: 27%; margin-top: 1%; margin-bottom: 1%;"> 3 </div>
-    <div style="width: 30%; height: 40%; background-color: blue; border: 1px solid black; margin-left: 65%; margin-top: -45%; margin-bottom: 1%"> 4 </div>
-    <div style="width: 100%; height: 2%; background-color: yellow; padding: 5%; border: 1px solid black;"> 5 </div>
-</div>
-
+    <div style="float: left; box-sizing: border-box; width: 20%; height: 65%; background-color: blue; border: 1px solid black;"> 2 </div>
+    <div style="float: left; box-sizing: border-box; width: 70%; height: 10%; background-color: red; border: 1px solid black; margin: 3%"> </div>
+    <div style="float: left; box-sizing: border-box; width: 30%; height: 40%; background-color: white; border: 1px solid black; margin: 5%;"> 3 </div>
+    <div style="float: left; box-sizing: border-box; width: 30%; height: 40%; background-color: blue; border: 1px solid black; margin: 5%;"> 4 </div>
+    <div style="float: left; width: 100%; height: 2%; background-color: yellow; padding: 5%; border: 1px solid black;"> 5 </div>
+    </div>
     </textarea>
 </div>
 
