--- a/reports/lab3.html
+++ b/reports/lab3.html
@@ -248,30 +248,30 @@
 <div id="p3-4">
     <h1>Гумова блокова верстка</h1>
     <div style="width:80%; height: 800px; text-align: center; font-weight: bold">
-        <div style="width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;">
-            <div style="width: 20%; height: 100%; background-color: white; border: 1px solid black;"></div>
+        <div style=" float: left; box-sizing: border-box; width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;">
+            <div style="float: left; box-sizing: border-box; width: 20%; height: 20px; background-color: white; border: 1px solid black;"></div>
             1
         </div>
         <div style="float: left; box-sizing: border-box; width: 20%; height: 75%; background-color: blue; border: 1px solid black;"> 2 </div>
         <div style="float: left; box-sizing: border-box; width: 70%; height: 10%; background-color: red; border: 1px solid black; margin: 3%"> </div>
         <div style="float: left; box-sizing: border-box; width: 30%; height: 40%; background-color: white; border: 1px solid black; margin: 5%;"> 3 </div>
         <div style="float: left; box-sizing: border-box; width: 30%; height: 40%; background-color: blue; border: 1px solid black; margin: 5%;"> 4 </div>
-        <div style="float: left; width: 100%; height: 2%; background-color: yellow; padding: 5%; border: 1px solid black;"> 5 </div>
+        <div style="float: left; box-sizing: border-box; width: 100%; height: 2%; background-color: yellow; padding: 5%; border: 1px solid black;"> 5 </div>
     </div>
 
     <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
                 color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 300px; margin: 20px 0">
-    <div style="width:80%; height: 800px; text-align: center; font-weight: bold"> 
-    <div style="width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;"> 
-    <div style="width: 20%; height: 100%; background-color: white; border: 1px solid black;"></div> 
-        1
-    </div>
-    <div style="float: left; box-sizing: border-box; width: 20%; height: 65%; background-color: blue; border: 1px solid black;"> 2 </div>
-    <div style="float: left; box-sizing: border-box; width: 70%; height: 10%; background-color: red; border: 1px solid black; margin: 3%"> </div>
-    <div style="float: left; box-sizing: border-box; width: 30%; height: 40%; background-color: white; border: 1px solid black; margin: 5%;"> 3 </div>
-    <div style="float: left; box-sizing: border-box; width: 30%; height: 40%; background-color: blue; border: 1px solid black; margin: 5%;"> 4 </div>
-    <div style="float: left; width: 100%; height: 2%; background-color: yellow; padding: 5%; border: 1px solid black;"> 5 </div>
-    </div>
+        <div style="width:80%; height: 800px; text-align: center; font-weight: bold">
+            <div style=" float: left; box-sizing: border-box; width: 100%; height: 3%; background-color: yellow; padding: 4%; border: 1px solid black;">
+                <div style="float: left; box-sizing: border-box; width: 20%; height: 20px; background-color: white; border: 1px solid black;"></div>
+                1
+            </div>
+            <div style="float: left; box-sizing: border-box; width: 20%; height: 75%; background-color: blue; border: 1px solid black;"> 2 </div>
+            <div style="float: left; box-sizing: border-box; width: 70%; height: 10%; background-color: red; border: 1px solid black; margin: 3%"> </div>
+            <div style="float: left; box-sizing: border-box; width: 30%; height: 40%; background-color: white; border: 1px solid black; margin: 5%;"> 3 </div>
+            <div style="float: left; box-sizing: border-box; width: 30%; height: 40%; background-color: blue; border: 1px solid black; margin: 5%;"> 4 </div>
+            <div style="float: left; box-sizing: border-box; width: 100%; height: 2%; background-color: yellow; padding: 5%; border: 1px solid black;"> 5 </div>
+        </div>
     </textarea>
 </div>
 
