--- a/reports/lab3.html
+++ b/reports/lab3.html
@@ -285,8 +285,7 @@
 
         <div id="p4-1">
             <h1>Зовнішній вигляд сторінки</h1>
-            <img src="img/lab3/my-site-part1.png" alt="" style="width: 98%">
-            <img src="img/lab3/my-site-part2.png" alt="" style="width: 98%">
+            <img src="images/lab3task3.png" alt="" style="width: 98%">
         </div>
 
         <div id="p4-2">
@@ -296,117 +295,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-            <meta charset="UTF-8">
-            <title>Навчання - ІТ</title>
-            <link rel="stylesheet" href="styles/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Java-розробник</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header>
-            <div class="top-container">
-            <div id="left-block-logo-caption">
-            <div id="logo">
-            <img src="img/it-icon.png" alt="">
+    <header>
+            <h1> Спеціалізація: Java-розробник </h1>
+    </header>
+    <main>
+        <section class="features">
+                <p class="feature"> Портфоліо для старту кар'єри</p>
+                <p class="feature"> Навчання на реальних кейсах</p>
+                <p class="feature"> Заробіток після 4 місяців навчання</p>
+                <p class="feature"> Можно працювати віддалено</p>
+        </section>
+        <h2> Як проходить навчання</h2>
+        <section class="stages">
+            <div class="stage"> 
+                <div class="circle">
+                    <span class="number">1</span>
+                  </div>
+                <p class="stage_header">Дивіться відеолекції<br> </p>
+                <p class="text_left">Якісне відео з зрозумілим <br>поясненням теорії</p>
+                <img src="img/videolecture.png" alt="Videolectures">
             </div>
-            <div id="caption">
-                Навчальний центр - ІТ
+            <div class="stage"> 
+                <div class="circle">
+                    <span class="number">2</span>
+                  </div>
+                <p class="stage_header">Виконуйте тестові завдання<br> </p>
+                    <p class="text_left">Здобувайте практичні навички вирішуючі тестові завдання</p>
+                    <img src="img/task.png" alt="Tasks"> 
             </div>
-        </div>
-
-            <div id="info">
-            Ми працюємо Пн-Пт з 10:00 до 19:00 Сб-Нд: Вихідний
-        </div>
-    </div>
-            <div class="nav-container">
-            <button>Головна</button>
-            <button>Акції</button>
-            <button>Курси</button>
-            <button>Про центр</button>
-            <button>Контакти</button>
-            <button>Ціни</button>
-            <button>Блог</button>
-    </div>
-</header>
-
-<main>
-            <div class="main-info-container">
-            <div class="courses-info">
-            <div><span>Курси інженерної графіки</span></div>
-            <div><span>Курси компю'терного моделювання</span></div>
-            <div><span>Курси програмування</span></div>
-            <div><span>Курси бухгалтерів</span></div>
-            <div><span>Курси системного адміністрування</span></div>
-            <div><span>Комп'ютер для початківців</span></div>
-            <div><span>Курси створення сайтів</span></div>
-            <div><span>Просування web-сайтів (SEO)</span></div>
-            <div><span>Курси менеджерів</span></div>
-            <div><span>Курси графіки</span></div>
-            <div><span>Створення сайту</span></div>
-            <div><span>Курси дизайну</span></div>
-        </div>
-            <div class="study-form">
-            <div style="font-size: 1.5em; font-weight: bold; margin: 10px 0; display: flex; align-items: center">
-            <img src="img/people-icon.png" alt="" style="height: 1.5em; margin-right: 15px;">
-                Нова форма навчання
+            <div class="stage"> 
+                <div class="circle">
+                    <span class="number">3</span>
+                  </div>
+                <p class="stage_header">Отримуйте розгорнутий фідбек<br> </p>
+                    <p class="text_left">Викладачі надають розгорнутий фідбек щодо ваших проектів та результатів</p>
+                    <img src="img/feedback.png" alt="Feedback"> 
             </div>
-            <div style="font-size: 1.15em; font-weight: bold; margin: 20px 0; display: flex; align-items: center">
-            <img src=img/question-mark.png alt="" style="height: 1.5em; margin-right: 15px;">
-                Вибір будь-якого часу курсу.
+            <div class="stage"> 
+                <div class="circle">
+                    <span class="number">4</span>
+                  </div>
+                <p class="stage_header">Працюйте над помилками<br> </p>
+                    <p class="text_left">Проходьте перевірку будь-скільки разів, щоб вдосконалити свої знання та навички</p>
+                    <img src="img/impove.jpg" alt="Improve"> 
             </div>
-            <p style="text-indent: 10px">Проведення занять безпосередньо у слухача <b>на дому або в офісі</b></p>
-            <div style="font-size: 1.15em; font-weight: bold; margin: 20px 0; display: flex; align-items: center">
-            <img src=img/question-mark.png alt="" style="height: 1.5em; margin-right: 15px;">
-                Навчання за індивідуальною програмою
+        </section>
+        <h2> Рівні навчання</h2>
+        <section class="levels">
+            <div class="level">
+                <img src="img/workspace.jpg" alt="Theory">
+                <p class="level_header"> Перший рівень: чітка і зрозуміла теорія</p>
+                <p class="level_text"> Цей рівень навчання зосереджений на наданні ґрунтовних теоретичних знань у певній галузі або темі. Він розроблений для того, щоб закласти міцний фундамент 
+                    для подальшого навчання та практичного застосування навичок.На цьому рівні можна очікувати: Вивчення основних концепцій та принципів: Ви будете знайомитися з фундаментальними
+                    знаннями, необхідними для розуміння теми.Отримання теоретичної бази: Ви будете вивчати теорії, моделі та алгоритми, що лежать в основі даної сфери.Розвиток аналітичних 
+                    та критичних мислення: Ви будете вчитися аналізувати інформацію, вирішувати проблеми та формулювати обґрунтовані висновки. Набуття навичок самостійного навчання: Ви будете вчитися
+                    знаходити та використовувати інформацію з різних джерел, а також ефективно організовувати свій час та ресурси.</p>
             </div>
-            <p style="text-indent: 10px">
-                Ви вчите тільки те, що вам потрібно. Програма підбирається під вас!
-            </p>
-            <div style="font-size: 1.15em; font-weight: bold; margin: 20px 0; display: flex; align-items: center">
-            <img src=img/question-mark.png alt="" style="height: 1.5em; margin-right: 15px;">
-                Безкоштовне встановлення ПЗ на ваш ноутбук або комп'ютер.
+            <div class="level">
+                <img src="img/Practice.jpg" alt="Theory">
+                <p class="level_header"> Другий рівень: інтенсивна практика</p>
+                <p class="level_text"> Цей рівень навчання зосереджений на наданні студентам можливості закріпити свої теоретичні знання та навички за допомогою практичних завдань та проектів.
+                    Він розроблений для того, щоб допомогти студентам застосувати те, що вони вивчили, в реальних умовах та розвинути свої практичні навички.На цьому рівні можна очікувати: 
+                    Виконання складних практичних завдань: Студенти будуть працювати над завданнями, які імітують реальні робочі ситуації та потребують застосування теоретичних знань на практиці.
+                    Участь у групових проектах: Студенти будуть співпрацювати в командах, щоби розробити та реалізувати проекти, пов'язані з їхньою областю навчання.
+                    Індивідуальне консультування: Студенти матимуть можливість отримати персональну допомогу від викладачів та наставників.
+                    Практичні демонстрації: Студенти будуть презентувати свої результати роботи перед одногрупниками та викладачами.</p>
             </div>
-            <p style="text-indent: 10px">
-                Викладач встановить, а також налаштує потрібну програму для виконання домашнього завдання.
-            </p>
-        </div>
-            <div class="find-course">
-            <div style="font-size: 1.5em; font-weight: bold; margin: 10px 0;">
-                Знайти курс по інтересам
-            </div>
-            <p style="font-size: 1.1em; margin: 10px 0">
-                Скористайтеся пошуком, щоб знайти потрібний вам курс або подивіться <a href="" id="link1">всі курси</a>
-            </p>
-            <input type="text" id="course-search" placeholder="Пошук курсів...">
-        </div>
-    </div>
-
-            <div class="additional-info">
-            <div style="font-size: 1.8em; font-weight: bold; margin: 20px 0; align-self: center">Курси web-програмування в
-            Києві.
-        </div>
-            <div style="display: flex">
-            <img src="img/web-prog.jpg" alt="" style="width: 30%; margin-left: 20px">
-            <p class="additional-info-paragraph">
-                Ми шукаємо всіх тих, кому цікавий світ програмування! Хочете займатися розробкою програмного
-                забезпечення
-                і побудовою web-сайтів? А, може ви вже робите це все і жадаєте додаткових знань, або вирішили підвищити
-                свою кваліфікацію? Не біда, якщо ніколи і не пробували себе в подібному - команда ІТ готова надавати
-                свої послуги людям будь-якого рівня знань. Якщо наші клієнти новачки, то ми почнемо заняття з основ, а
-                якщо ж просунуті - то вони починатимуть навчання з більш складного матеріалу, при цьому не зупиняючись
-                на тому, що їм давно відомо. Теми для проведення занять дозволено вибирати на свій розсуд.
-            </p>
-        </div>
-    </div>
-</main>
-
-<footer>
-            <button>Ми на мапі</button>
-            <button>Зв'язок з нами</button>
-            <button>Корисні посилання</button>
-            <button>Популярне на блозі</button>
-</footer>
-
+        </section>
+    </main>
+    <footer>
+        <p class="footer_text"> 2024</p>
+    </footer>
 </body>
-</html>
+
     </textarea>
         </div>
 
@@ -414,167 +384,138 @@
             <h1>CSS-код сторінки</h1>
             <textarea readonly style="font-family: monospace; background-color: #f4f7f8; border-left: 6px solid #558abb;
                 color: #4d4e53; width: 90%; padding: 10px 10px 0; height: 400px; margin: 20px 0">
-header {
-    height: 150px;
-    background-color: #eeeeee;
-    display: flex;
-    flex-direction: column;
-}
+        body{
+            text-align: center;
+        }
 
-#left-block-logo-caption {
-    display: flex;
-    width: 40%;
-    justify-content: left;
-    align-items: center;
-}
+        body p {
+            font-family: "Merriweather", serif;
+        }
 
-#caption {
-    margin-left: 2%;
-    font-size: 1.5em;
-    color: #319dd2;
-    font-weight: bold;
-}
+        header{
+            background-color: antiquewhite;
+        }
+
+        .features{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+
+        .feature{
+            margin: 30px;
+            background-color: antiquewhite;
+            padding: 20px;
+            border: 1px solid black;
+        }
+
+        .h2{
+            text-align: left;
+        }
+
+        .stages{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+
+        .stage{
+            border: 1px solid black;
+            margin: 30px;
+            padding: 5px 20px 5px;
+            height: 20%;
+            width: 10%;
+        }
 
 
-header .top-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 15px 20px;
-    align-items: center;
-    height: 30%;
-}
+        .circle{
+            width: 50px;
+            height: 50px; 
+            border-radius: 50%; 
+            background-color: antiquewhite; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center;
+        }
 
-header #logo {
-    height: 50px;
-    width: 50px;
-}
+        .number {
+            font-size: 24px;
+            font-weight: bold;
+            color: black;
+            }
 
-#info {
-    color: #1f2286;
-    font-size: 1.2em;
-    font-weight: bold;
-}
+        .stage_header{
+            text-align: left;
+            font-weight: bold;
+            height: 30px;
+        }
 
-.nav-container {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: space-evenly;
-    padding: 0;
-}
+        .text_left{
+            text-align: left;
+            height: 100px;
+        }
 
-.nav-container > button {
-    width: 10%;
-    height: 80%;
-    color: white;
-    background-color: #39a4d7;
-    border: none;
-    font-size: 1.2em;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 5px;
-}
+        .stage img {
+            max-width: 100%; 
+            height: auto; 
+            border-top: 1px solid black;
+        }
 
-.nav-container > button:hover {
-    background-color: #267999;
-}
+        .levels{
+            display: flex;
+            flex-direction: column;
+        }
 
-.main-info-container {
-    display: flex;
-    justify-content: space-evenly;
-}
+        .level{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 100px;
+            padding: 30px;
+        }
 
-.main-info-container > div {
-    width: 30%;
-    height: 550px;
-    margin: 20px 10px;
-    padding: 10px 30px;
-}
+        .level img{
+            max-width: 50%;
+            height: auto;
+            border: 1px solid black;
+        }
 
-.courses-info {
-    color: white;
-    background-color: #319ed3;
-}
+        .level-header{
+            margin-left: 10px;
+            margin-top: -450px;
+            font-weight: bold;
+        }
 
-.courses-info > div {
-    font-size: 1.2em;
-    margin: 20px 0;
-}
+        .level_text{
+            max-width: 400px;
+            margin-top: 45px;
+            margin-left: -300px; 
+            text-align: left;
+        }
 
-.courses-info > div > span {
-    padding-bottom: 5px;
-    border-bottom: #36b9f7 1px solid;
-    cursor: pointer;
-}
+        footer{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: black;
+            width: 100%;
+            height: 50px;
+        }
 
-.study-form {
-    background-color: #ffa200;
-}
-
-.find-course {
-    background-color: #cb3536;
-    color: #fcc1ae;
-}
-
-#link1:link {
-    color: #f77973;
-}
-
-#link1:visited {
-    color: #f77973;
-}
-
-#course-search {
-    width: 90%;
-    height: 30px;
-    border: #cfb3b4 5px solid;
-    border-radius: 10px;
-    padding: 5px 10px
-}
-
-#course-search::placeholder {
-    font-weight: bold;
-    font-size: 1.2em;
-}
-
-.additional-info {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.additional-info-paragraph {
-    margin: 0 20px;
-    font-size: 1.5em;
-    align-self: center;
-}
-
-footer {
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-footer > button {
-    width: 15%;
-    margin: 0 20px;
-    height: 50%;
-    background-color: #eeeeee;
-    border-radius: 10px;
-    border: #e3e3e3 5px solid;
-    cursor: pointer;
-    font-size: 1.2em;
-    color: #1e6e79;
-    font-weight: bold;
-}
+        .footer_text{
+            color: white;
+            font-weight: bold;
+            font-size: 24;
+        }
     </textarea>
-        </div>
+</div>
 
-        <div id="lab3-conclusions">
-            <h2>Висновок з лабораторної роботи</h2>
-
+<div id="lab3-conclusions">
+        <h2>Висновок з лабораторної роботи</h2>
             <p>
-                .
+                Під час виконання лабораторної роботи отримано теоретичні відомості і навички щодо використання макетів, CSS-стилів та Flexbox
+                 під час розробки HTML-сторінок, із використанням Flexbox модифіковано основний проект, розроблені фіксовані та гумові макети табличної 
+                 і блокої верстки, із використанням Flexbox розробленно HTML сторінку із заданою темою та структурою. 
             </p>
-        </div>
+</div>
