--- a/reports/lab6.html
+++ b/reports/lab6.html
@@ -104,9 +104,10 @@
       <input type="password" name="password" />
     </label>
     <br />
-    <button type="submit">Log in</button>
+    <button type="submit" onclick="addFormSubmitHandler()">Log in</button>
   </form>
 </div>
+
 
 
 <div id="p7">
